--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,29 @@
+amqp==5.3.1
 beautifulsoup4==4.13.3
+billiard==4.2.1
+celery==5.5.1
 certifi==2025.1.31
 charset-normalizer==3.4.1
+click==8.1.8
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+colorama==0.4.6
+elastic-transport==8.17.1
+elasticsearch==9.0.0
 idna==3.10
+kombu==5.5.3
 mpi4py==4.0.3
+prompt_toolkit==3.0.51
+python-dateutil==2.9.0.post0
 PyYAML==6.0.2
 redis==5.2.1
 requests==2.32.3
+six==1.17.0
 soupsieve==2.6
 typing_extensions==4.13.1
+tzdata==2025.2
 urllib3==2.3.0
+vine==5.1.0
+wcwidth==0.2.13
 Whoosh==2.7.4
